[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Scripts/Virus.gd" type="Script" id=1]
[ext_resource path="res://Source/Images/white-texture-rounded.png" type="Texture" id=2]
[ext_resource path="res://Source/Images/game_hospital_logo.png" type="Texture" id=4]
[ext_resource path="res://Source/Themes/HeartRateTheme.tres" type="Theme" id=5]
[ext_resource path="res://Source/Themes/MenuTheme.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 50 )

[node name="Virus" type="RigidBody2D" groups=["pickable"]]
position = Vector2( 90, 50 )
input_pickable = true
mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2( 10, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="NinePatchRect" parent="."]
margin_left = -90.0
margin_top = -50.0
margin_right = 110.0
margin_bottom = 50.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Virus" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -48.0
margin_right = -38.0
margin_bottom = 12.0
mouse_filter = 2
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="NameLabel" type="Label" parent="UI"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.9763
margin_top = 17.0
margin_right = 46.0237
margin_bottom = 28.0
theme = ExtResource( 5 )
text = "Nome do Paciente"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PatientName" type="Label" parent="UI"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.9763
margin_top = 26.0
margin_right = 46.0237
margin_bottom = 37.0
theme = ExtResource( 5 )
align = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BottomNameLine" type="Line2D" parent="UI"]
position = Vector2( -54.234, 45.9999 )
scale = Vector2( 1.02373, 1 )
points = PoolVector2Array( 70.5596, 40.0001, 195.593, 40.0001 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VirusLabel" type="Label" parent="UI"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 69.0
margin_top = 7.0
margin_right = 194.0
margin_bottom = 18.0
theme = ExtResource( 5 )
text = "Doença"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PatientVirus" type="Label" parent="UI"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 69.0
margin_top = 13.0
margin_right = 194.0
margin_bottom = 44.0
theme = ExtResource( 6 )
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="BottomVirusLine" type="Line2D" parent="UI"]
position = Vector2( -54.234, 47.9999 )
scale = Vector2( 1.02373, 1 )
points = PoolVector2Array( 122.331, -8.9999, 241.503, -8.9999 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HasVirusLabel" type="Label" parent="UI"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 71.0
margin_top = 46.0
margin_right = 152.0
margin_bottom = 57.0
theme = ExtResource( 5 )
text = "Doença Contraída?"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PatientHasVirus" type="CheckBox" parent="UI"]
margin_left = 151.0
margin_top = 40.0
margin_right = 175.0
margin_bottom = 64.0
mouse_filter = 2
disabled = true
shortcut_in_tooltip = false
button_mask = 0
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="HospitalLogo" type="TextureRect" parent="UI"]
margin_left = 157.0
margin_top = 58.0
margin_right = 197.0
margin_bottom = 98.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}
